# wesen

./: main.py  pyproject.toml
src/Wesen/gui/: basicgui.py
