[project]
name = "wesen"
version = "0.1.0"
description = "Predator-prey simulation for learning Python and AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "PyOpenGL",
    "Pillow",
]

[project.scripts]
wesen = "Wesen.loader:Loader"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
